--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,18 @@
 
 /* Map */
 
-#map {
+#map-container {
   position: absolute;
   left: 0;
   top: 40px;
   width: 100vw;
   height: calc(100% - 40px);
   background-color: gray;
+}
+
+#map-container #map {
+  width: 100%;
+  height: 100%;
 }
 
 /* Sidebar */
